--- a/style.css
+++ b/style.css
@@ -10,3 +10,8 @@ title{
     color: blue;
     background-color: cornsilk;
 }
+h3{
+    color: darkgreen;
+    font-size: 20px;
+    background-color: darkseagreen;
+}
